fix for position fixed - scrollbar width

--- a/src/app/workflow/workflow-details/workflow-details.component.scss
+++ b/src/app/workflow/workflow-details/workflow-details.component.scss
@@ -175,8 +175,8 @@
         z-index: 999;
         background-color: #fff;
         height: 60px;
-        width: calc(80% - 50px);
-        padding: 0 20px 0 15%;
+        width: calc(80% - 35px);
+        padding: 0 35px 0 15%;
         box-shadow: 0px 0px 20px rgba(26, 35, 126, 0.15);
         clip-path: inset(-20px 0px -20px -20px);
         button {
